--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   tflite_flutter: ^0.9.5
   camera: ^0.10.5
+  yaml: ^3.1.2
 
 dev_dependencies:
   flutter_test:
