--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   tflite_flutter: ^0.9.5
   camera: ^0.10.5
   yaml: ^3.1.2
+  flutter_vision: ^1.1.1
+  image: ^4.0.17
 
 dev_dependencies:
   flutter_test:
