--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   yaml: ^3.1.2
   flutter_vision: ^1.1.1
   image: ^4.0.17
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
