--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_vision: ^1.1.1
   image: ^4.0.17
   path_provider: ^2.0.15
+  image_picker: ^0.8.7+5
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +66,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - model/
+    - model/best_saved_model/labels.txt
+    - model/best_saved_model/best_float16.tflite
+    - model/best_saved_model/best_float32.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
