--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.15
   image_picker: ^0.8.7+5
   flutter_speed_dial: ^7.0.0
+  material_design_icons_flutter: ^6.0.7096
 
 dev_dependencies:
   flutter_test:
